# findog

./: .dockerignore  .gitignore  README.md  ai.Dockerfile  docker-compose.yaml  nginx.conf  package-lock.json  public.Dockerfile  server.Dockerfile
.github/workflows/: ai.yaml  deploy.yaml  docker.yaml  server.yaml
ai/: pyproject.toml
ai/server/: __init__.py  env.py
ai/server/db/: __init__.py  model.py
ai/server/utils/: acc.py  preprocess.py  tensors.py  vision.py
ai/src/: server.py
public/: package.json
public/public/: index.html  manifest.json  site.webmanifest
public/src/: index.css  index.js  serviceWorkerRegistration.js
public/src/components/: AnimalCard.jsx  DetailModal.jsx  DetailModal2.jsx  Header.jsx  Label.jsx  Loading.jsx  Loading2.jsx  SimilarityCard.jsx  index.js
public/src/images/: index.js
public/src/pages/: Intro.jsx  Main.jsx  Research.jsx  Similarity.jsx
server/: .env  .gitignore  Cargo.toml  sample.env
server/src/: api.rs  dogs.sql  entity.rs  main.rs  server.rs
