[tool.poetry]
name = "ai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["uvicorn"], version = "^0.98"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.17"}
uvicorn = {extras = ["standard"], version = "^0.22.0"}
opencv-python = "^4.7.0.72"
torch = { version = "2", source = "pytorch-cpu"}
torchvision = { version = "0.15", source = "pytorch-cpu"}
numpy = "^1.25.0"
pillow = "^9.5.0"
matplotlib = "^3.7.1"
asyncpg = "^0.27.0"
sentence-transformers = "^2.2.2"
ftfy = ^6.1.1
clip = { git = "https://github.com/openai/CLIP.git" }

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
