[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = { version = "0.6", features = ["multipart"] }
base64 = "0.21.2"
chrono = "0.4.26"
dotenvy = "0.15.7"
log = "0.4.19"
reqwest = "0.11.18"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.7"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "any", "postgres", "chrono"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.4.1", features = ["fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
